[package]
name = "loccer"
version = "1.0.0"
description = "Loccer is a tool for counting lines of code"
readme = "README.md"
repository = "https://github.com/TheJeme/loccer"
license = "MIT"
keywords = ["count", "lines", "code", "loc"]
categories = ["filesystem"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
